[10.9] [PR 425] Fix Database Upgrade MariaDB 10.6
Backport of PR #425

--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_database_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_database_commands.adoc
@@ -29,7 +29,7 @@ TIP: For a more detailed explanation see xref:configuration/database/db_conversi
 
 === Convert the MySQL Charset
 
-Convert charset of MySQL/MariaDB to use utf8mb4. If you are using an older ownCloud installation, the database may not be setup to use the 4-byte unicode charset. This command changes the database charset to use `utf8mb4`. Check your database charset before your are using this command.
+Convert charset of MySQL/MariaDB to use utf8mb4. If you are using an older ownCloud installation, the database may not be setup to use the 4-byte unicode charset. This command changes the database charset to use `utf8mb4`. Check your database charset before you use this command.
 
 [source,bash,subs="attributes+"]
 ----
