--- a/modules/admin_manual/pages/enterprise/external_storage/windows-network-drive_configuration.adoc
+++ b/modules/admin_manual/pages/enterprise/external_storage/windows-network-drive_configuration.adoc
@@ -262,7 +262,14 @@ The simplest way, useful for initial testing is, to start the `wnd:listen` proce
 {occ-command-example-prefix} wnd:listen <host> <share> <username>
 ----
 
-The password is an optional parameter and you will be asked for it if you didn't provide it as in the example above. In order to start `wnd:listen` without any user interaction like as service, provide the password from a password file.
+The password is an optional parameter and you will be asked for it if you didn't provide it as in the example above. If necessary the workgroup can be set in the username as well. Use the syntax `'<workgroup>\<username>'` for this. It's important to use the quotes so the backslash is kept, so the whole command looks like:
+
+[source,bash,subs="attributes+"]
+----
+{occ-command-example-prefix} wnd:listen <host> <share> '<workgroup>\<username>'
+----
+
+In order to start `wnd:listen` without any user interaction like as service, provide the password from a password file.
 
 [source,bash,subs="attributes+"]
 ----
