[10.10] [PR 461] Removed /var/www/owncloud/occ
Backport of PR #461

--- a/modules/admin_manual/pages/configuration/user/reset_admin_password.adoc
+++ b/modules/admin_manual/pages/configuration/user/reset_admin_password.adoc
@@ -16,7 +16,7 @@ HTTP user, as in this example on Ubuntu Linux:
 
 [source,bash,subs="attributes+"]
 ----
-$ {occ-command-example-prefix} /var/www/owncloud/occ user:resetpassword admin
+$ {occ-command-example-prefix} user:resetpassword admin
 Enter a new password:
 Confirm the new password:
 Successfully reset password for admin
