--- a/modules/admin_manual/pages/maintenance/upgrading/manual_upgrade.adoc
+++ b/modules/admin_manual/pages/maintenance/upgrading/manual_upgrade.adoc
@@ -8,7 +8,7 @@
 
 {description} These examples need to be adapted according your needs and your environment.
 
-NOTE: This guide assumes that you have basic knowledge about Unix terminology, commands and concepts. In case you do not feel familiar with this, ownCloud highly recommends that you create a playground first to try the steps and/or get, if you are entitled to, in touch with ownCloud Support to avoid breaking your system or data loss.
+NOTE: This guide assumes that you have basic knowledge about Unix terminology, commands and concepts. In case you are not familiar with these, ownCloud highly recommends that you create a playground first to try the steps and/or get in touch with ownCloud support to avoid breaking your system or losing data.
 
 NOTE: This guide covers the upgrade of the ownCloud instance only. When planning to update/upgrade your server environment or server packages, read the xref:installation/manual_installation/manual_installation.adoc[Detailed Installation Guide] first to match the prerequisites.
 
@@ -109,7 +109,7 @@ After the upgrade is finished, you can re-run this script to secure the `.htacce
 
 == Manual Step-by-Step Upgrade
 
-Note that this procedure is not an in-place upgrade but an upgrade to a new directory identical named as it was originally set. This ensures that no code or settings can orphan or get overwritten.
+Note that this procedure is not an in-place upgrade but an upgrade to a new directory identically named as originally set. This ensures that no code or settings can get orphaned or overwritten.
 
 === Move Current ownCloud Directory
 
@@ -145,7 +145,7 @@ If you keep your `data` **outside** of your `owncloud` directory, then you donâ€
 
 === Copy Relevant config.php Content
 
-With the new source files now in place of where the old ones used to be, copy all `\*config.php` and `*.json` files (if one exist) from your old ownCloud directory to your new ownCloud directory:
+With the new source files now in place of where the old ones used to be, copy all `\*config.php` and `*.json` files (if any exist) from your old ownCloud directory to your new ownCloud directory:
 
 [source,bash]
 ----
@@ -223,7 +223,7 @@ sudo find -L /var/www/owncloud -type f -print0 | xargs -0 chmod 640
 sudo find -L /var/www/owncloud -type d -print0 | xargs -0 chmod 750
 ----
 
-* Set the occ command to executable
+* Set the occ command to executable:
 +
 [source,bash]
 ----
@@ -236,7 +236,7 @@ If you have configured a script for xref:installation/manual_installation/script
 
 === Start the Upgrade
 
-With the apps disabled and ownCloud in maintenance mode, start the xref:configuration/server/occ_command.adoc#command-line-upgrade[upgrade process] from the command line, note the example is based on Ubuntu Linux, execute this within the ownCloud root folder.
+With the apps disabled and ownCloud in maintenance mode, start the xref:configuration/server/occ_command.adoc#command-line-upgrade[upgrade process] from the command line. Note that the example is based on Ubuntu Linux. Execute this within the ownCloud root folder.
 
 [source,bash,subs="attributes+"]
 ----
