[10.10] [PR 477] Updated section about encryption overhead
Backport of PR #477

--- a/modules/admin_manual/pages/configuration/files/encryption/encryption_configuration.adoc
+++ b/modules/admin_manual/pages/configuration/files/encryption/encryption_configuration.adoc
@@ -34,7 +34,7 @@ ownCloud’s server-side encryption encrypts files stored on the ownCloud server
 [NOTE]
 ====
 * Encrypting files increases their size by an 8KB header plus 100 bytes per each 8KB block of the file. Remember to take this into account when you are both provisioning storage and setting storage quotas.
-* If you are _running_ the encryption app before version 1.5.0 or _started_ with an encryption app version before 1.5.0, BASE64 encoding was used and might still be used for old files if untouched since then. In these cases, old encrypted files increased their size by roughly 35%. We recommend to update the ownCloud system to be able to use the benefits of reduced file sizes for new and rewritten files. Note that the encryption app version < 1.5.0 was delivered as part of the ownCloud system lower than 10.7.
+* If you are _running_ the encryption app before version 1.5.0 or _started_ with an encryption app version before 1.5.0, BASE64 encoding was used and might still be used for old files if untouched since then. In these cases, old encrypted files increased their size by roughly 35%. We recommend to update the ownCloud system to be able to use the benefits of reduced file sizes for new and rewritten files. Note that the encryption app version lower than 1.5.0 was delivered as part of the ownCloud system lower than 10.7.
 * User quotas are based on the _unencrypted_ file size — *not* the encrypted size. This means that admins need to calculate with higher disk space requirements on the backend.
 * You *CANNOT* use encryption for your _primary storage_ if the primary storage is an Amazon S3 compatible object storage. This is disabled by default, also see xref:configuration/files/external_storage/s3_compatible_object_storage_as_primary.adoc[S3 Compatible Object Storage as Primary Storage Location]
 ====
