--- a/modules/admin_manual/pages/configuration/general_topics/index.adoc
+++ b/modules/admin_manual/pages/configuration/general_topics/index.adoc
@@ -3,5 +3,5 @@
 In this section you will find information about:
 
 - xref:configuration/general_topics/code_signing.adoc[Code Signing]
-- xref:configuration/general_topics/general_troubleshooting.adoc[General Troubleshooting]
 - xref:configuration/general_topics/impersonate_users.adoc[Impersonating Users]
+- xref:configuration/general_topics/search.adoc[Full Text Search]
