--- a/modules/admin_manual/pages/troubleshooting/general_troubleshooting.adoc
+++ b/modules/admin_manual/pages/troubleshooting/general_troubleshooting.adoc
@@ -5,7 +5,7 @@ configuration/general_topics/general_troubleshooting.adoc, \
 go/admin-setup-well-known-URL.adoc, \
 go/admin-logfiles.adoc
 
-:description: This page gives an overview about general troubleshooting topics and can help to sort out paths  addressing your topics. 
+:description: This page gives an overview of general troubleshooting topics and can help to sort out paths  addressing your topics. 
 
 == Introduction
 
